--- a/src/styles/CVHeader.css
+++ b/src/styles/CVHeader.css
@@ -1,7 +1,6 @@
 header {
-    background-color: #1c3769;
+    background-color: #2f5396;
     width: 100%;
-    margin: .5rem auto;
     color: #fff;
 }
 
@@ -10,12 +9,19 @@ header {
     display: inline-block;
     margin: 0 .5rem;
     font-size: 2.5rem;
+    padding: .5rem;
 }
+
+.first-name { margin-right: 0; }
+.last-name { margin-left: 0; }
 
 .job-title {
     font-size: 1.5rem;
-    margin: .5rem;
+    margin: 0 .5rem;
+    padding: 0 .5rem;
 }
+
+.edit-header-info { margin-left: .5rem; }
 
 .edit-header-info input {
     margin: .5rem;
