--- a/src/styles/CVAbout.css
+++ b/src/styles/CVAbout.css
@@ -1,3 +1,12 @@
+.about-title {
+  font-size: 1.75rem;
+  margin-left: .5rem;
+}
+
+.about-para {
+  margin-left: .5rem;
+}
+
 .about-info-edit textarea {
   display: block;
   width: 50%;
