--- a/src/styles/CVExperience.css
+++ b/src/styles/CVExperience.css
@@ -1,3 +1,32 @@
-.experience-info-edit > form > input {
+.experience-title {
+  font-size: 1.75rem;
+  margin-left: .5rem;
+  margin-bottom: 0;
+  border-bottom: 1px solid #000;
+}
+
+.experience-section ul {
+  list-style: none;
+  padding-left: .5rem;
+  margin-top: .25rem;
+}
+
+.company-name {
+  font-size: 1.25rem;
+  font-weight: 700;
+  margin-bottom: 0;
+}
+
+.date-of-employment {
+  font-size: 1rem;
+  font-style: italic;
+  margin-top: .5rem;
+}
+
+.job-description {
+  width: 80%;
+}
+
+.experience-info-edit form input {
   display: block;
 }
