--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3,6 +3,7 @@ html, body {
     margin: 0;
     width: 100%;
     height: 100%;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .App {
