--- a/src/styles/CVMain.css
+++ b/src/styles/CVMain.css
@@ -19,4 +19,11 @@
 /* CVAside section */
 .cv-aside-section {
     width: 30%;
+    padding-left: 1.5rem;
+}
+
+.cv-aside-section section[class$='-section'] h3[class$='-title'] {
+    color: #000;
+    font-size: 1.75rem;
+    margin-left: .5rem;
 }
