--- a/src/styles/CVEducation.css
+++ b/src/styles/CVEducation.css
@@ -8,6 +8,8 @@
   font-size: 1.25rem;
   font-weight: 700;
   margin-bottom: 0;
+  word-break: break-word;
+  max-width: 80%;
 }
 
 .study-date {
@@ -18,6 +20,8 @@
 }
 
 .degree-title {
+  word-break: break-word;
+  max-width: 80%;
   margin-top: 0;
 }
 
