--- a/src/styles/CVHeader.css
+++ b/src/styles/CVHeader.css
@@ -17,8 +17,9 @@ header {
 
 .job-title {
     font-size: 1.5rem;
-    margin: 0 .5rem;
+    margin: 0 .75rem;
     padding: 0 .5rem;
+    margin-top: -10px;
 }
 
 .edit-header-info { margin-left: .5rem; }
