--- a/src/styles/CVMain.css
+++ b/src/styles/CVMain.css
@@ -1,5 +1,6 @@
 #cv-document {
-    width: 100%;
+    margin: 1.5rem auto;
+    width: 95%;
     display: flex;
     justify-content: space-around;
 }
