Change background color and add padding to the header

--- a/src/styles/CVHeader.css
+++ b/src/styles/CVHeader.css
@@ -1,7 +1,8 @@
 header {
-    background-color: #2f5396;
+    background-color: #083893;
     width: 100%;
     color: #fff;
+    padding: .5rem;
 }
 
 .first-name,
