--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -26,9 +26,15 @@ html, body {
     color: #fff;
 }
 
+#button-container {
+    display: flex;
+    max-width: 320px;
+    margin: 0 auto;
+    padding-bottom: 3rem;
+}
+
 .toggle-btn,
 .download-pdf-btn {
-    display: block;
     cursor: pointer;
     padding: .75rem;
     width: fit-content;
