--- a/src/styles/CVExperience.css
+++ b/src/styles/CVExperience.css
@@ -13,14 +13,15 @@
 }
 
 .date-of-employment {
-  font-size: 1rem;
+  font-size: .75rem;
   font-style: italic;
-  margin-top: .5rem;
+  margin-top: 0;
 }
 
 .job-description {
   word-break: break-word;
   max-width: 80%;
+  margin-top: .5rem;
 }
 
 .experience-info-edit form input {
