--- a/src/styles/CVEducation.css
+++ b/src/styles/CVEducation.css
@@ -13,16 +13,15 @@
 }
 
 .study-date {
-  font-size: 1rem;
+  font-size: .75rem;
   font-style: italic;
-  margin-top: .5rem;
-  margin-bottom: .5rem;
+  margin-top: 0;
 }
 
 .degree-title {
   word-break: break-word;
   max-width: 80%;
-  margin-top: 0;
+  margin-top: .5rem;
 }
 
 .education-info-edit form input {
