--- a/src/styles/CVHeader.css
+++ b/src/styles/CVHeader.css
@@ -18,7 +18,8 @@ header {
 
 .job-title {
     font-size: 1.5rem;
-    margin: 0 .75rem;
+    margin: 0 .5rem;
+    padding: .5rem;
     margin-top: -10px;
 }
 
