--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -17,7 +17,8 @@ html, body {
 .cancel-button {
     cursor: pointer;
     padding: .5rem;
-    width: 64px;
+    width: 100px;
+    max-width: 100%;
     margin: .5rem;
     display: block;
     border-radius: 48px;
@@ -37,7 +38,8 @@ html, body {
 .download-pdf-btn {
     cursor: pointer;
     padding: .75rem;
-    width: fit-content;
+    width: 150px;
+    max-width: 100%;
     margin: .5rem auto;
     background-color: #198754;
     border-radius: 48px;
